--- a/app/src/main/res/layout/item_current_time_time_zone.xml
+++ b/app/src/main/res/layout/item_current_time_time_zone.xml
@@ -65,9 +65,7 @@
             android:background="@color/seperator"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 <!--</android.support.v7.widget.CardView>-->
