--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.metallic.worldtime.MainActivity"
-    tools:showIn="@layout/fragment_current_time">
+    tools:context="com.metallic.worldtime.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
