--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -15,9 +15,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+
 
         <View android:id="@+id/header_background_view"
             android:layout_width="match_parent"
@@ -26,15 +27,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/header_bottom_guide_view"
-            android:layout_marginBottom="-8dp"
-            android:background="#f00"
+            android:background="@color/material_red_800"
             />
 
         <View
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="8dp"
             android:id="@+id/header_bottom_guide_view"
             app:layout_constraintTop_toBottomOf="@+id/name_text_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:visibility="invisible"/>
 
 
@@ -57,9 +59,8 @@
             android:layout_height="wrap_content"
             tools:text="Europe/Munich"
             android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/time_text_view"
-            app:layout_constraintStart_toStartOf="@id/time_text_view"
-            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintTop_toBottomOf="@+id/time_text_view"
+            app:layout_constraintStart_toStartOf="@+id/time_text_view"
             android:textSize="16sp"/>
 
         <TextView
@@ -81,9 +82,8 @@
             android:layout_height="wrap_content"
             tools:text="Europe/Munich"
             android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/time2_text_view"
-            app:layout_constraintEnd_toEndOf="@id/time2_text_view"
-            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintTop_toBottomOf="@+id/time2_text_view"
+            app:layout_constraintEnd_toEndOf="@+id/time2_text_view"
             android:textSize="16sp"/>
 
 
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             tools:text="Event Name"
             android:textColor="@color/text_secondary"
-            app:layout_constraintTop_toBottomOf="@id/header_background_view"
+            app:layout_constraintTop_toBottomOf="@+id/header_bottom_guide_view"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,17 +102,6 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/seperator"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
