--- a/app/src/main/res/layout/item_select_time_zone_check.xml
+++ b/app/src/main/res/layout/item_select_time_zone_check.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_frame"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -13,7 +14,8 @@
         android:layout_marginStart="8dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:gravity="center_vertical"
         android:textSize="18sp"
         tools:text="München"/>
