--- a/app/src/main/res/layout/item_current_time_time_zone.xml
+++ b/app/src/main/res/layout/item_current_time_time_zone.xml
@@ -15,6 +15,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/item_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
