--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -27,10 +27,9 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:tint="@android:color/white"
-        android:src="@drawable/ic_time_64"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toTopOf="@id/text_view"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/activity_horizontal_margin" />
