--- a/app/src/main/res/layout/fragment_current_time.xml
+++ b/app/src/main/res/layout/fragment_current_time.xml
@@ -9,13 +9,14 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="192dp"
+        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.CollapsingToolbarLayout
+        <!--<android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="false">-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -23,11 +24,61 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:layout_collapseMode="pin">
+                app:layout_collapseMode="pin" />
 
-            </android.support.v7.widget.Toolbar>
+            <android.support.constraint.ConstraintLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/item_layout"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom">
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+                <TextView
+                    android:id="@+id/local_name_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Europe/Berlin"
+                    android:textColor="@color/toolbar_foreground"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/local_info_text_view"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    android:textSize="18sp"
+                    android:layout_marginStart="16dp"/>
+
+
+                <TextView
+                    android:id="@+id/local_info_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/local_time"
+                    android:textColor="@color/toolbar_foreground"
+                    app:layout_constraintTop_toBottomOf="@id/local_name_text_view"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="14sp"
+                    android:layout_marginStart="16dp"/>
+
+                <TextView
+                    android:id="@+id/local_time_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    tools:text="13:37"
+                    android:textSize="48sp"
+                    android:textColor="@color/toolbar_foreground"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
 
 
     </android.support.design.widget.AppBarLayout>
@@ -37,7 +88,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:paddingBottom="84dp"
+        android:clipToPadding="false"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
