--- a/app/src/main/res/layout/item_current_time_time_zone.xml
+++ b/app/src/main/res/layout/item_current_time_time_zone.xml
@@ -60,7 +60,20 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
 
-        <View
+        <TextView
+            android:id="@+id/day_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/time_text_view"
+            app:layout_constraintEnd_toStartOf="@id/time_text_view"
+            tools:text="Yesterday"
+            android:textSize="12sp"
+            android:textColor="@color/text_secondary2"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"/>
+
+
+    <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/seperator"
